# solanaceae_ircclient

./: CMakeLists.txt
plugins/: CMakeLists.txt  plugin_ircclient.cpp
src/: CMakeLists.txt  test2.cpp
src/solanaceae/ircclient/: ircclient.cpp  ircclient.hpp
src/solanaceae/ircclient_contacts/: components.hpp  components_id.inl  irc_components_to_string.cpp  irc_components_to_string.hpp  ircclient_contact_model.cpp  ircclient_contact_model.hpp
src/solanaceae/ircclient_messages/: ircclient_message_manager.cpp  ircclient_message_manager.hpp  string_view_split.hpp
